# Mini_RPG

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Observer.h  OpenGL practice  README.md  Subject.h  circle.yml  game
.circleci/: config.yml
Controller/: Controller.cpp
Model/: AttackThread.cpp  Character.cpp  Character.h  Model.cpp  Model.h  Notification.h  Sprite.cpp  Weapon.h
View/: Animation.h  View.cpp  View.h
_Straights/: Card.h  CardPlayExceptions.h  Computer.cc  Computer.d  Computer.h  Controller.cc  Controller.d  Controller.h  Human.cc  Human.d  Human.h  Makefile  Model.cc  Model.d  Model.h  Observer.h  Player.cc  Player.d  Player.h  Subject.cc  Subject.h  View.cc  View.h  bonus.txt  main.cc  straights.glade  straights.glade~
assets/Areas/: start.yaml
assets/Items/: coin.yaml  enemy_sword_1.yaml  heart.yaml  item.yaml.example  potion_1.yaml  potion_2.yaml  potion_3.yaml  potion_4.yaml  scratch.yaml  sword_1.yaml
resources/Areas/: default.json  start.yaml
resources/Confs/: default.json  item_template.yaml
resources/Items/: coin.yaml  enemy_sword_1.yaml  heart.yaml  item.yaml.example  potion_1.yaml  potion_2.yaml  potion_3.yaml  potion_4.yaml  scratch.yaml  sword1.yaml  sword_1.yaml
source/: Config.h  ConfigReader.cc  ConfigReader.h  ItemReader.h  ItemReference.h  TODO.md  main.cc
source/Controller/: Controller.cc  Controller.h
source/Model/: Character.cc  Character.h  EventPackage.h  GameThread.cc  Model.cc  Model.h  Notification.h  Sprite.cc  Sprite.h
src/: Channel.h  Config.h  ConfigReader.cc  ConfigReader.h  ItemReader.h  ItemReference.h  TODO.md  main.cc  main.cpp
test/: MyTestSample.h  sample.cc  sample.cpp
(+49 files in other folders)
